log/build_2023-08-04_17-08-22/my_station_pkg/stderr.log
  File "/home/spiderweb/TestBase/install/my_station_pkg/lib/python3.10/site-packages/my_station_pkg/telemetrypoll_node.py", line 109
    break  # Break the loop after receiving the telemetry data once
    ^^^^^
SyntaxError: 'break' outside loop

